added contest service
